# Job-Queue

./: .gitignore  .golangci.yml  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  docker-compose.monitoring.yml  docker-compose.yml  go.mod  go.sum
cmd/server/: BUILD  main.go
cmd/worker/: main.go
grafana/provisioning/dashboards/: dashboards.yml  jobqueue-dashboard.json
internal/: BUILD
internal/api/: BUILD  health.go  router.go  server.go
internal/db/: BUILD  connection.go  store.go
internal/grpc/: client.go
internal/interfaces/: BUILD  store.go
internal/jobs/: BUILD  job.go  manager.go
internal/logger/: logger.go
internal/metrics/: metrics.go
internal/nats/: client.go  messages.go  server.go
internal/websocket/: client.go  handler.go  hub.go
internal/worker/: BUILD  pool.go
migrations/: 001_create_jobs_table.sql
prometheus/: prometheus.yml
proto/: jobqueue.pb.go  jobqueue.proto  jobqueue_grpc.pb.go
web/: dashboard.html
